# sisauth/app/Http/Controllers/UserController.php
@@ -5,6 +5,7 @@ namespace App\Http\Controllers;
 use App\Models\User;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Hash;
+use Symfony\Component\HttpFoundation\Response;
 use Tymon\JWTAuth\Facades\JWTAuth;
 
 /**
@@ -30,15 +31,28 @@ use Tymon\JWTAuth\Facades\JWTAuth;
  *     type="string",
  *     description="Email address of the User",
  *     example="john.doe@example.com"
+ *   ),
+ *   @OA\Property(
+ *     property="phone",
+ *     type="string",
+ *     description="Phone number of the User",
+ *     example="1234567890"
+ *   ),
+ *   @OA\Property(
+ *     property="cpf",
+ *     type="string",
+ *     description="CPF (Cadastro de Pessoas Físicas) of the User",
+ *     example="123.456.789-01"
  *   )
  * )
  */
+
 
 class UserController extends Controller
 {
     /**
      * @OA\Get(
-     *     path="/users",
+     *     path="/api/users",
      *     operationId="indexUsers",
      *     tags={"Users"},
      *     summary="Display a listing of users",
@@ -62,5 +76,174 @@ class UserController extends Controller
     {
         $users = User::all();
         return response()->json($users);
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/api/users/{id}",
+     *     operationId="getUserById",
+     *     tags={"Users"},
+     *     summary="Display the specified user",
+     *     description="Returns the user details",
+     *     security={{"bearerAuth":{}}},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="ID of the user",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(ref="#/components/schemas/User")
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="User not found"
+     *     )
+     * )
+     */
+    public function show($id)
+    {
+        $user = User::findOrFail($id);
+        return response()->json($user);
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/api/users",
+     *     operationId="storeUser",
+     *     tags={"Users"},
+     *     summary="Create a new user",
+     *     description="Creates a new user with the provided details",
+     *     security={{"bearerAuth":{}}},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(ref="#/components/schemas/User")
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="User created successfully",
+     *         @OA\JsonContent(ref="#/components/schemas/User")
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="Invalid data provided"
+     *     )
+     * )
+     */
+    public function store(Request $request)
+    {
+        $validatedData = $request->validate([
+            'name' => 'required|string|max:255',
+            'email' => 'required|string|email|max:255|unique:users',
+            'password' => 'required|string|min:6',
+            'phone' => 'nullable|string|max:20', 
+            'cpf' => 'nullable|string|max:20',               
+        ]);
+
+        $user = User::create([
+            'name' => $validatedData['name'],
+            'email' => $validatedData['email'],
+            'password' => Hash::make($validatedData['password']),
+            'phone' => $validatedData['phone'], 
+            'cpf' => $validatedData['cpf'],
+        ]);
+
+        return response()->json($user, Response::HTTP_CREATED);
+    }
+
+
+    /**
+     * @OA\Put(
+     *     path="/api/users/{id}",
+     *     operationId="updateUser",
+     *     tags={"Users"},
+     *     summary="Update an existing user",
+     *     description="Updates an existing user with the provided details",
+     *     security={{"bearerAuth":{}}},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="ID of the user",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64"
+     *         )
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(ref="#/components/schemas/User")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="User updated successfully",
+     *         @OA\JsonContent(ref="#/components/schemas/User")
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="User not found"
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="Invalid data provided"
+     *     )
+     * )
+     */
+    public function update(Request $request, $id)
+    {
+        $user = User::findOrFail($id);
+
+        $validatedData = $request->validate([
+            'name' => 'string|max:255',
+            'email' => 'string|email|max:255|unique:users,email,' . $id,
+            'phone' => 'nullable|string|max:20',
+            'cpf' => 'nullable|string|max:20',
+        ]);
+
+        $user->update($validatedData);
+
+        return response()->json($user);
+    }
+
+    /**
+     * @OA\Delete(
+     *     path="/api/users/{id}",
+     *     operationId="deleteUser",
+     *     tags={"Users"},
+     *     summary="Delete a user",
+     *     description="Deletes a user based on ID",
+     *     security={{"bearerAuth":{}}},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="ID of the user",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=204,
+     *         description="User deleted successfully"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="User not found"
+     *     )
+     * )
+     */
+    public function destroy($id)
+    {
+        $user = User::findOrFail($id);
+        $user->delete();
+
+        return response()->json(null, Response::HTTP_NO_CONTENT);
     }
 }
